[gd_scene load_steps=20 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://art/playerGrey_walk1.png" type="Texture" id=2]
[ext_resource path="res://art/playerGrey_walk2.png" type="Texture" id=3]
[ext_resource path="res://art/playerGrey_up1.png" type="Texture" id=4]
[ext_resource path="res://art/playerGrey_up2.png" type="Texture" id=5]
[ext_resource path="res://Hurtbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Hitbox.tscn" type="PackedScene" id=8]
[ext_resource path="res://Exhaust.gd" type="Script" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "up",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 14.9667
height = 0.0

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 1, 1, 1, 0.501961, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0.00501098, 0.5 ), 0.0, 0.0, 0, 0, Vector2( 0.994989, 0.324 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.75
scale_curve = SubResource( 6 )
color_ramp = SubResource( 4 )

[sub_resource type="CanvasItemMaterial" id=10]
blend_mode = 1

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0.00552486, 0.0110497, 0.961326, 1 )
colors = PoolColorArray( 0.027451, 0.0431373, 0.0431373, 0, 0.590332, 0.96875, 0.96875, 1, 0.0391083, 0.195625, 0.910156, 1, 1, 1, 1, 0 )

[sub_resource type="CircleShape2D" id=11]
radius = 15.3533

[node name="Player" type="Area2D"]
z_index = 10
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 6.03323 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "right"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.420921, -0.561232 )
shape = SubResource( 2 )
disabled = true

[node name="Trail" type="Particles2D" parent="."]
z_index = -1
amount = 10
speed_scale = 2.0
local_coords = false
process_material = SubResource( 7 )
texture = ExtResource( 2 )

[node name="Exhaust" type="Line2D" parent="."]
modulate = Color( 1.5, 1.5, 1.5, 1 )
material = SubResource( 10 )
points = PoolVector2Array( -138.943, 44.2355, -104.857, 34.4965, -81.4456, 21.0117, -45.6155, 15.2536, -30.6324, 2.89256, 0.0828857, -0.104057 )
width_curve = SubResource( 8 )
gradient = SubResource( 9 )
script = ExtResource( 9 )

[node name="Hitbox" parent="Exhaust" instance=ExtResource( 8 )]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" parent="Exhaust/Hitbox" index="0"]
position = Vector2( -62.8389, 19.3885 )
rotation = -0.328122

[node name="Hurtbox" parent="." instance=ExtResource( 7 )]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -0.187286, -0.187286 )
shape = SubResource( 11 )

[node name="Timer" parent="Hurtbox" index="1"]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="tree_entered" from="Exhaust" to="." method="_on_Exhaust_tree_entered"]
[connection signal="area_entered" from="Exhaust/Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="ward_ended" from="Hurtbox" to="." method="_on_Hurtbox_ward_ended"]
[connection signal="ward_ended" from="Hurtbox" to="Hurtbox" method="_on_Hurtbox_ward_ended"]
[connection signal="ward_started" from="Hurtbox" to="." method="_on_Hurtbox_ward_started"]
[connection signal="ward_started" from="Hurtbox" to="Hurtbox" method="_on_Hurtbox_ward_started"]

[editable path="Exhaust/Hitbox"]
[editable path="Hurtbox"]
